add #why-use section

--- a/landing_page.html
+++ b/landing_page.html
@@ -11,7 +11,7 @@
     <meta name="description" content="My description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>My title</title>
+    <title>前度禮物交易所</title>
 </head>
 
 <body>
@@ -19,8 +19,7 @@
         <nav>
             <a href="/"><img alt="Logo" src="https://via.placeholder.com/200x70?text=Logo" height="70"></a>
             <ul>
-                <li>Menu Item 1</li>
-                <li><a href="#">Menu Item 2</a></li>
+                <li><a href="#"></a></li>
                 <li><a href="#">Dropdown Menu Item</a>
                     <ul>
                         <li><a href="#">Sublink with a long name</a></li>
@@ -29,30 +28,63 @@
                 </li>
             </ul>
         </nav>
-        <h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
-        <p>Page Subheading with <mark>highlighting</mark></p>
+        <h1>處理前度禮物嘅平台</h1>
+        <p>Dump咗佢?唔好啦</p>
         <br>
         <p><a href="#"><i>Italic Link Button</i></a><a href="#"><b>Bold Link Button &rarr;</b></a></p>
     </header>
     <main>
         <hr>
-        <section>
+        <section id="why-use">
             <header>
-                <h2>Section Heading</h2>
-                <p>Section Subheading</p>
+                <h2>點解要用前度禮物交易所?</h2>
+                <p>當你識咗一個新嘅男女朋友之後，前度送嘅禮物基本上係冇可能可以keep得到。所以呢啲禮物通常下場：</p>
             </header>
             <aside>
-                <h3>Card heading</h3>
-                <p>Card content*</p>
-                <p><small>*with small content</small></p>
+                <h3>Option 1 - Dump咗佢</h3>
+                <figure>
+                    <img class="crop" alt="Dump咗佢" src="./static/rubbin-bin.jpg">
+                    <figcaption><small><span>Photo by <a href="https://unsplash.com/@jilburr?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jilbert Ebrahimi</a> on <a href="https://unsplash.com/photos/-wR0XMaegRo?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small></figcaption>
+                </figure>
+                <ul>
+                    <li>Residual value = 0。Total loss</li>
+                    <li>零風險</li>
+                </ul>
             </aside>
             <aside>
-                <h3>Card heading</h3>
-                <p>Card content <sup>with notification</sup></p>
+                <h3>Option 2 - 收埋唔畀另一半見到</h3>
+                <figure>
+                    <img class="crop" alt="收埋唔畀另一半見到" src="./static/hiding-safe2.jpg">
+                    <figcaption><small><span>Photo by <a href="https://unsplash.com/@farber?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jonathan Farber</a> on <a href="https://unsplash.com/s/photos/safe?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small></figcaption>
+                </figure>
+                <ul>
+                    <li>Residual value高過total loss少少（都係用唔到，但保留之後再用嘅機會）</li>
+                    <li>比option 1風險稍高（有機會被另一半搵到，罪名：有嘢隱瞞）</li>
+                </ul>
             </aside>
             <aside>
-                <h3>Card heading</h3>
-                <p>Card content</p>
+                <h3>Option 3 - 扮唔係前度送嘅禮物</h3>
+                <figure>
+                    <img class="crop" alt="扮唔係前男女朋友送嘅禮物" src="./static/liar.jpg">
+                    <figcaption><small><span>Photo by <a href="https://unsplash.com/@reskp?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jametlene Reskp</a> on <a href="https://unsplash.com/s/photos/lying?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small></figcaption>
+                </figure>
+                <ul>
+                    <li>Residual value = 禮物本身的價值（自用）</li>
+                    <li>不一定可行，例如有刻名嘅禮物就扮唔到</li>
+                    <li>現任風險甚高，被發現的話隨時分手（罪名：講大話）</li>
+                </ul>
+            </aside>
+            <aside>
+                <h3>Option 4 - 賣咗佢</h3>
+                <figure>
+                    <img class="crop" alt="賣咗佢" src="./static/sale-discount.jpg">
+                    <figcaption><small><span>Photo by <a href="https://unsplash.com/@tamanna_rumee?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Tamanna Rumee</a> on <a href="https://unsplash.com/s/photos/discount?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small></figcaption>
+                </figure>
+                <ul>
+                    <li>Residual value = 禮物本身的價值 × 2手discount × 情侶折讓（e.g. 刻字）</li>
+                    <li>未必賣得出，賣得出都要承受好大折讓</li>
+                    <li>有名譽風險（賣前男女朋友嘅禮物未必受社會接受，「比較cheap」）</li>
+                </ul>
             </aside>
         </section>
         <hr>
