--- a/landing_page.html
+++ b/landing_page.html
@@ -35,6 +35,27 @@
     </header>
     <main>
         <hr>
+        <section id="products">
+            <header>
+                <h2>本交易所的產品和服務</h2>
+            </header>
+            <aside>
+                <figure>
+                    <img class="crop center" alt="交易平台" src="./static/exchange-platform.png">
+                </figure>
+                <h2>交易平台</h2>
+                <p>讓你將自己前度嘅禮物交換成<u>其他人前度嘅禮物</u>。</p>
+            </aside>
+            <aside>
+                <figure>
+                    <img class="crop center" alt="託管人服務" src="./static/custodian.png">
+                </figure>
+                <h2>[快將推出]託管人服務</h2>
+                <p>代你保管前度有紀念價值嘅物品（如信件）。</p>
+            </aside>
+        </section>
+        
+        <hr>
         <section id="why-use">
             <header>
                 <h2>點解要用前度禮物交易所?</h2>
