--- a/landing_page.html
+++ b/landing_page.html
@@ -128,6 +128,16 @@
                     <li>有名譽風險（賣前男女朋友嘅禮物未必受社會接受，「比較cheap」）</li>
                 </ul>
             </aside>
+
+            <footer id="benefit">
+                <h2>使用本交易所嘅好處</h2>
+                <ol>
+                    <li>交易雙方處境都一樣，都係想換走前度嘅禮物，所以交換時都係同一個level咁樣等價交換。</li>
+                    <li>無上述嘅現任風險（最尾keep嘅係其他人前度禮物），光明正大咁處理及善用前度送嘅禮物。同時亦無上述嘅名譽風險，物盡其用，減少社會浪費。</li>
+                    <li>更有機會換到比原先禮物價值更高（對你黎講）嘅物品。</li>
+                    <li>減少同現任鬧交嘅風險，人無事先做到世界冠軍。</li>
+                </ol>
+            </footer>
         </section>
 
         <hr>
