--- a/landing_page.html
+++ b/landing_page.html
@@ -141,10 +141,24 @@
         </section>
 
         <hr>
-        <section>
+        <section id="testimonial">
+            <h2>網友對前度禮物嘅睇法</h2>
             <blockquote>
-                "Quote"
-                <footer><i>- Attribution</i></footer>
+                "雖然另一伴話已經對前度無感覺<br>
+                但仲keep住前度送d禮物<br>
+                咁做令我<b>硬係覺得有留戀</b>"
+                <footer><i>- lihkg: 介唔介意另一伴keep住前度既禮物</i></footer>
+            </blockquote>
+            <blockquote>
+                "怒掉 金屬製飾物比我係最後嘈交時砸爛再掉<br>
+                其他野分手一星期後掉<br>
+                <b>好礙眼</b>"
+                <footer><i>- lihkg: 介唔介意另一伴keep住前度既禮物</i></footer>
+            </blockquote>
+            <blockquote>
+                "因為想另一半都掉<br>
+                自己<b>見到佢keep住ex d野都會唔鐘意</b>"
+                <footer><i>- lihkg: [集思廣益]大家點處理前度送嘅野</i></footer>
             </blockquote>
         </section>
         <hr>
