edit testimonial header

--- a/landing_page.html
+++ b/landing_page.html
@@ -142,7 +142,9 @@
 
         <hr>
         <section id="testimonial">
-            <h2>網友對前度禮物嘅睇法</h2>
+            <header>
+                <h2>網民對處理前度禮物嘅睇法</h2>
+            </header>
             <blockquote>
                 "雖然另一伴話已經對前度無感覺<br>
                 但仲keep住前度送d禮物<br>
