--- a/landing_page.html
+++ b/landing_page.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="https://via.placeholder.com/70x70">
+    <link rel="icon" href="#">
     <link rel="stylesheet" href="./mvp.css">
 
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="https://via.placeholder.com/200x70?text=Logo" height="70"></a>
+            <a href="/"><img alt="Logo" src="#" height="70"></a>
             <ul>
                 <li><a href="#"></a></li>
                 <li><a href="#">Dropdown Menu Item</a>
@@ -29,9 +29,39 @@
             </ul>
         </nav>
         <h1>處理前度禮物嘅平台</h1>
-        <p>Dump咗佢?唔好啦</p>
-        <br>
-        <p><a href="#"><i>Italic Link Button</i></a><a href="#"><b>Bold Link Button &rarr;</b></a></p>
+        <p>Dump咗佢? 唔好啦</p>
+        <section>
+            <!-- Begin Mailchimp Signup Form -->
+            <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+                #mc_embed_signup {
+                    background: #fff;
+                    clear: left;
+                    font: 14px Helvetica, Arial, sans-serif;
+                }
+
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+            </style> -->
+            <div id="mc_embed_signup_hero">
+                <form
+                    action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                            placeholder="email address" required>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
+                        <div class="button"><input type="submit" value="立即登記" name="subscribe"
+                                id="mc-embedded-subscribe" class="button"></div>
+                    </div>
+                </form>
+            </div>
+
+            <!--End mc_embed_signup-->
+        </section>
     </header>
     <main>
         <hr>
@@ -177,7 +207,7 @@
                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style> -->
-            <div id="mc_embed_signup">
+            <div id="mc_embed_signup_footer">
                 <form
                     action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
@@ -191,8 +221,8 @@
                                 name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
                         <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
                                 id="mc-embedded-subscribe" class="button"></div>
-        </div>
-            </form>
+                    </div>
+                </form>
             </div>
 
             <!--End mc_embed_signup-->
