--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                            placeholder="email address" required>
+                            placeholder="e.g. goodboyfriend1999@gmail.com" required>
+                        <br>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                                 name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
