reg button css and logo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 <head>
     <link rel="icon" href="#">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto|Open Sans">
     <link rel="stylesheet" href="./mvp.css">
 
     <meta charset="utf-8">
@@ -13,11 +15,10 @@
 
     <title>前度禮物交易所</title>
 </head>
-
 <body>
-    <header>
+    <header class="hero">
         <nav>
-            <a href="/"><img alt="Logo" src="#" height="70"></a>
+            <a href="/"><span alt="Logo" id="logo" src="#">🎁↯🎁</span></a>
             <ul>
                 <li><a href="#"></a></li>
                 <li><a href="#">Dropdown Menu Item</a>
@@ -55,8 +56,8 @@
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                                 name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
-                        <div class="button"><input type="submit" value="立即登記" name="subscribe"
-                                id="mc-embedded-subscribe" class="button"></div>
+                        <input type="submit" value="立即登記" name="subscribe"
+                                id="mc-embedded-subscribe" class="registerButton center">
                     </div>
                 </form>
             </div>
