--- a/index.html
+++ b/index.html
@@ -230,10 +230,16 @@
             <!--End mc_embed_signup-->
         </section>
     </main>
-    <footer>
+    <footer id="contact">
         <hr>
         <p>
-            <small>Contact info</small>
+            <small>聯絡我們</small>
+        </p>
+        <p>
+            <small>如對本交易所的產品和服務有任何疑問，歡迎經以下方式聯絡我們。我們將盡量試下於三個工作天內回覆。</small>
+        </p>
+        <p>
+            <small>email: <a href="mailto:extochangehk@gmail.com">extochangehk@gmail.com</a></small>
         </p>
     </footer>
 </body>
