update nav bar and title

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     <meta name="description" content="My description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>前度禮物交易所</title>
+    <title>香港前度禮物交易所</title>
 </head>
 <body>
     <header class="hero">
         <nav>
-            <a href="/"><span alt="Logo" id="logo" src="#">🎁↯🎁</span></a>
+            <span alt="Logo" id="logo" src="#">🎁↯🎁</span>
             <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#">Dropdown Menu Item</a>
+                <li><a href="#">立即登記</a></li>
+                <li><a href="#">☰</a>
                     <ul>
-                        <li><a href="#">Sublink with a long name</a></li>
-                        <li><a href="#">Short sublink</a></li>
+                        <li><a href="#products">產品和服務</a></li>
+                        <li><a href="#why-use">使用原因</a></li>
+                        <li><a href="#benefits">好處</a></li>
+                        <li><a href="#contact">好處</a></li>
                     </ul>
                 </li>
             </ul>
@@ -161,7 +163,7 @@
                 </ul>
             </aside>
 
-            <footer id="benefit">
+            <footer id="benefits">
                 <h2>使用本交易所嘅好處</h2>
                 <ol>
                     <li>交易雙方處境都一樣，都係想換走前度嘅禮物，所以交換時都係同一個level咁樣等價交換。</li>
