--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#products">產品和服務</a></li>
                         <li><a href="#why-use">使用原因</a></li>
                         <li><a href="#benefits">好處</a></li>
-                        <li><a href="#contact">好處</a></li>
+                        <li><a href="#contact">聯絡我們</a></li>
                     </ul>
                 </li>
             </ul>
