--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                            placeholder="e.g. goodboyfriend1999@gmail.com" required>
+                            placeholder="e.g. iamgoodboyfriend@gmail.com" required>
                         <br>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
