fix footer reg form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <span alt="Logo" id="logo" src="#">🎁↯🎁</span>
             <ul>
-                <li><a href="#">立即登記</a></li>
+                <li><a href="#mc_embed_signup_footer">立即登記</a></li>
                 <li><a href="#">☰</a>
                     <ul>
                         <li><a href="#products">產品和服務</a></li>
@@ -217,14 +217,15 @@
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                     target="_blank" novalidate>
                     <div id="mc_embed_signup_scroll">
-                        <h2 for="mce-EMAIL">Subscribe</h2>
+                        <p>有意試用禮物交易平台或了解本交易所最新消息</p>
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                            placeholder="email address" required>
+                            placeholder="e.g. iamgoodboyfriend@gmail.com" required>
+                        <br>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                                 name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
-                        <div class="clear"><input type="submit" value="Subscribe" name="subscribe"
-                                id="mc-embedded-subscribe" class="button"></div>
+                        <input type="submit" value="立即登記" name="subscribe"
+                                id="mc-embedded-subscribe" class="registerButton center">
                     </div>
                 </form>
             </div>
