add logo and edit hero

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="#">
+    <link rel="icon" type="image/png" href="./static/extochangehk-icon36x36.png">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto|Open Sans">
     <link rel="stylesheet" href="./mvp.css">
@@ -18,7 +18,8 @@
 <body>
     <header class="hero">
         <nav>
-            <span alt="Logo" id="logo" src="#">🎁↯🎁</span>
+            <!-- <span alt="Logo" id="logo" src="#">🎁↯🎁</span> -->
+            <img src="./static/extochangehk-icon72x72.png" alt="logo">
             <ul>
                 <li><a href="#mc_embed_signup_footer">立即登記</a></li>
                 <li><a href="#">☰</a>
@@ -31,8 +32,9 @@
                 </li>
             </ul>
         </nav>
-        <h1>處理前度禮物嘅平台</h1>
-        <p>Dump咗佢? 唔好啦</p>
+        <h1>香港前度禮物交易所</h1>
+        <h3>處理前度禮物嘅平台 - 不再為前度物品煩惱</h3>
+        <p>Dump咗佢？唔好啦</p>
         <section>
             <!-- Begin Mailchimp Signup Form -->
             <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
@@ -212,6 +214,7 @@
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style> -->
             <div id="mc_embed_signup_footer">
+                <h2>登記試用</h2>
                 <form
                     action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
