--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto|Open Sans">
     <link rel="stylesheet" href="./mvp.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKX32HV1P"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LCKX32HV1P');
+    </script>
 
     <meta charset="utf-8">
     <meta name="description" content="My description">
