add gift eg typing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto|Open Sans">
     <link rel="stylesheet" href="./mvp.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LCKX32HV1P"></script>
     <script>
@@ -29,7 +31,10 @@
         <nav>
             <!-- <span alt="Logo" id="logo" src="#">🎁↯🎁</span> -->
             <img src="./static/extochangehk-icon72x72.png" alt="logo">
+            
             <ul>
+                <li><h1><span id="typed"></span></h1></li>
+                <li><h3>Dump咗佢？&nbsp;&nbsp;唔好啦</h3></li>
                 <li><a href="#mc_embed_signup_footer">立即登記</a></li>
                 <li><a href="#">☰</a>
                     <ul>
@@ -43,7 +48,7 @@
         </nav>
         <h1>香港前度禮物交易所</h1>
         <h3>處理前度禮物嘅平台 - 不再為前度物品煩惱</h3>
-        <p>Dump咗佢？唔好啦</p>
+
         <section>
             <!-- Begin Mailchimp Signup Form -->
             <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
@@ -76,7 +81,46 @@
             </div>
 
             <!--End mc_embed_signup-->
+
+           
         </section>
+        <!-- <br> -->
+        <div>
+            <div id="typed-strings">
+                <p>前男友送嘅刻字Ipad`📱`</p>
+                <p>前女友送嘅刻字Ipad`📱`</p>
+                <p>前男友送嘅刻字Iphone`📱`</p>
+                <p>前女友送嘅刻字Iphone`📱`</p>
+                <p>前男友送嘅銀包`👝`</p>
+                <p>前女友送嘅銀包`👝`</p>
+                <p>前男友送嘅手袋`👜`</p>
+                <p>前女友送嘅公事包`💼`</p>
+                <p>前男友送嘅情侶戒指`💍`</p>
+                <p>前女友送嘅情侶戒指`💍`</p>
+                <p>前男友送嘅情侶擺設`🗿`</p>
+                <p>前女友送嘅情侶擺設`⚱`</p>
+                <p>前男友送嘅衫`👚`</p>
+                <p>前女友送嘅衫`🧥`</p>
+                <p>前男友送嘅褲`👖`</p>
+                <p>前女友送嘅褲`👖`</p>
+                <p>前男友送嘅鞋`👠`</p>
+                <p>前女友送嘅鞋`👟`</p>
+                <p>前男友送嘅襪`🧦`</p>
+                <p>前女友送嘅襪`🧦`</p>
+              </div>
+              <!-- <h1><span id="typed"></span></h1>
+              <h3>Dump咗佢？&nbsp;&nbsp;&nbsp;唔好啦</h3> -->
+            <script>
+                var typed = new Typed('#typed', {
+                  stringsElement: '#typed-strings',
+                  smartBackspace: true,
+                  loop: true,
+                  shuffle: true,
+                  typeSpeed: 50,
+                  backSpeed: 50,
+                });
+            </script>
+        </div>
     </header>
     <main>
         <hr>
