--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
 <body>
     <header class="hero">
         <nav>
-            <!-- <span alt="Logo" id="logo" src="#">🎁↯🎁</span> -->
             <img src="./static/extochangehk-icon72x72.png" alt="logo">
-            
             <ul>
-                <li><h1><span id="typed"></span></h1></li>
-                <li><h3>Dump咗佢？&nbsp;&nbsp;唔好啦</h3></li>
-                <li><a href="#mc_embed_signup_footer">立即登記</a></li>
+                <li><h3><span id="typed"></span>&nbsp;&nbsp;Dump咗佢？&nbsp;&nbsp;唔好啦</h3></li>
+                <!-- <li><a href="#mc_embed_signup_footer">立即登記</a></li> -->
                 <li><a href="#">☰</a>
                     <ul>
                         <li><a href="#products">產品和服務</a></li>
