edit product names

--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
                 <figure>
                     <img class="crop center" alt="交易平台" src="./static/exchange-platform.png">
                 </figure>
-                <h2>交易平台</h2>
+                <h2>前度禮物交易平台</h2>
                 <p>讓你將自己前度嘅禮物交換成<u>其他人前度嘅禮物</u>。</p>
             </aside>
             <aside>
                 <figure>
                     <img class="crop center" alt="託管人服務" src="./static/custodian.png">
                 </figure>
-                <h2>[快將推出]託管人服務</h2>
-                <p>代你保管前度有紀念價值嘅物品（如信件）。</p>
+                <h2>[快將推出]前度物品託管人服務</h2>
+                <p>代你保管有紀念價值嘅前度物品（如信件）。</p>
             </aside>
         </section>
         
