--- a/index.html
+++ b/index.html
@@ -264,25 +264,27 @@
                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
             </style> -->
-            <div id="mc_embed_signup_footer">
-                <h2>登記試用</h2>
-                <form
-                    action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                    target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                        <p>有意試用禮物交易平台或了解本交易所最新消息</p>
-                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                            placeholder="e.g. iamgoodboyfriend@gmail.com" required>
-                        <br>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
-                        <input type="submit" value="立即登記" name="subscribe"
-                                id="mc-embedded-subscribe" class="registerButton center">
-                    </div>
-                </form>
-            </div>
+            <article>
+                <div id="mc_embed_signup_footer">
+                    <h2>登記試用</h2>
+                    <form
+                        action="https://gmail.us20.list-manage.com/subscribe/post?u=ec8a5a56df9490e1b38741d22&amp;id=e243549f96"
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                        target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                            <p>有意試用禮物交易平台或了解本交易所最新消息</p>
+                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                placeholder="e.g. iamgoodboyfriend@gmail.com" required>
+                            <br>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                    name="b_ec8a5a56df9490e1b38741d22_e243549f96" tabindex="-1" value=""></div>
+                            <input type="submit" value="立即登記" name="subscribe"
+                                    id="mc-embedded-subscribe" class="registerButton center">
+                        </div>
+                    </form>
+                </div>
+            </article>
 
             <!--End mc_embed_signup-->
         </section>
