--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 
     <meta charset="utf-8">
     <meta name="title" content="香港前度禮物交易所 - 處理前度禮物嘅平台">
-    <meta name="description" content="不再為前度物品煩惱。本交易所的產品和服務：前度禮物交易平台，讓你將自己前度嘅禮物交換成其他人前度嘅禮物。前度物品託管人服務，代你保管有紀念價值嘅前度物品（如信件）。">
+    <meta name="description" content="處理前度禮物嘅平台 - 從此不再為前度物品煩惱。本交易所的產品和服務：前度禮物交易平台，讓你將自己前度嘅禮物交換成其他人前度嘅禮物。">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="交易平台, 前度, 禮物, 前男友, 前女友">
+    <meta name=”robots” content="index, follow">
+    <meta charset="UTF-8">
     <title>香港前度禮物交易所</title>
 </head>
 <body>
